# ReimbursementSystem1.0

./: Application.cpp  Application.h  AuthenticationManager.cpp  AuthenticationManager.h  CMakeCache.txt  CMakeLists.txt  Credentials.cpp  Credentials.h  DataBaseAccessLayer.cpp  DataBaseAccessLayer.h  LoginManager.cpp  LoginManager.h  Makefile  Notification.cpp  Notification.h  NotificationManager.cpp  NotificationManager.h  Professor.cpp  Professor.h  README.md  RegistrationManager.cpp  RegistrationManager.h  ReimbursementDetails.cpp  ReimbursementDetails.h  SignUpManually.cpp  SignUpManually.h  SimpleLogger.cpp  SimpleLogger.h  Staff.cpp  Staff.h  Student.cpp  Student.h  TripDetails.cpp  TripDetails.h  User.cpp  User.h  a.out  demo.py  main.cpp  regWrap.cpp  (+1 more)
www/: index.html
www/css/: style.css
www/js/: app.js  controllers.js  services.js
www/lib/angular-youtube-mb/: .bower.json
www/lib/ionic/css/: ionic.css
www/templates/: player.html  playlist.html  tab-dash.html  tabs.html  videos.html
